# QCA

./: .gitmodules
plugins/: CMakeLists.txt
plugins/qca-commoncrypto/: readme.md
plugins/qca-cryptodev/: readme.md
plugins/qca-gpgme/: readme.md
plugins/qca-linux/: CMakeLists.txt  config-qca-linux.h.in  qca-linux.cpp  readme.md
plugins/qca-linuxcrypto/: readme.md
plugins/qca-nettle/: readme.md
plugins/qca-tiny-aes-c/: readme.md
